INTG-107: prevent navbar wrapping

--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -27,6 +27,8 @@
         }
       }
 
+      white-space: nowrap;
+
       .variable-value-link {
         padding: 15px 17px;
         background-color: inherit;
